--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "Jongita <jurgitajonaityte@gmail.com> (https://github.com/jongita)",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "pg": "^8.12.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
